@@ -83,9 +83,8 @@ IF(NOT MOCK_CMD STREQUAL "MOCK_CMD-NOTFOUND")
 ENDIF(NOT MOCK_CMD STREQUAL "MOCK_CMD-NOTFOUND")
 
 IF(EXISTS ${MAINTAINER_SETTING})
-    USE_FEDPKG("${RPM_BUILD_SRPMS}/${PRJ_SRPM_FILE_NAME}" TAGS
-	${FEDORA_RAWHIDE_TAG} ${FEDORA_CURRENT_RELEASE_TAGS} el6 el5)
-    USE_BODHI(TAGS ${FEDORA_CURRENT_RELEASE_TAGS} el6 el5)
+    RELEASE_ON_FEDORA("${RPM_BUILD_SRPMS}/${PRJ_SRPM_FILE_NAME}"
+	TAGS ${FEDORA_CURRENT_RELEASE_TAGS} el6 el5)
 ENDIF(EXISTS ${MAINTAINER_SETTING})
 
 ####################################################################
