@@ -262,9 +262,8 @@ IF(NOT DEFINED _MANAGE_MAINTAINER_TARGETS_CMAKE_)
 	    ## Target: release
 	    IF(NOT DEFINED RELEASE_TARGETS)
 		SET(RELEASE_TARGETS rpmlint koji_scratch_build tag upload
-		    fedpkg_build bodhi_new
-		    changelog_update commit_after_release
-		    push_post_build)
+		    release_on_fedora
+    		    push_post_build)
 	    ENDIF(NOT DEFINED RELEASE_TARGETS)
 
 	    LIST(FIND RELEASE_TARGETS koji_scratch_build
