@@ -9,6 +9,15 @@
 #   FEDORA_RAWHIDE_TAG: Koji tags for rawhide
 #   FEDORA_CURRENT_RELEASE_TAGS: Current tags of fedora releases.
 # Defines following macros:
+#   RELEASE_ON_FEDORA(srpm [NORAWHIDE] [tag1 [tag2 ...])
+#   - This call USE_FEDPKG and USE_BODHI and set the corresponding
+#     dependencies. This macro is recommended than calling USE_FEDPKG and
+#     USE_BODHI directly.
+#     Defines following targets:
+#     + release_on_fedora: Make necessary steps for releasing on fedora,
+#       such as making source file tarballs, source rpms, build with fedpkg
+#       and upload to bodhi.
+#
 #   USE_FEDPKG(srpm [NORAWHIDE] [tag1 [tag2 ...])
 #   - Use fedpkg targets if ~/.fedora-upload-ca.cert exists.
 #     If ~/.fedora-upload-ca.cert does not exists, this marcos run as an empty
@@ -79,11 +88,13 @@ IF(NOT DEFINED _USE_FEDPKG_CMAKE_)
 
 	    ADD_CUSTOM_TARGET(koji_scratch_build_${_branch}
 		COMMAND ${KOJI} build --scratch dist-${_branch} ${srpm}
+		DEPENDS ${srpm}
 		COMMENT "koji scratch build on ${_branch} with ${srpm}"
 		)
 
 	    ADD_DEPENDENCIES(koji_scratch_build koji_scratch_build_${_branch})
 	ENDFOREACH(_tag ${_tags})
+	ADD_DEPENDENCIES(koji_scratch_build rpm)
     ENDMACRO(_use_koji_make_targets srpm)
 
     MACRO(_use_fedpkg_make_targets srpm)
@@ -108,6 +119,8 @@ IF(NOT DEFINED _USE_FEDPKG_CMAKE_)
 	    COMMENT "fedpkg update"
 	    )
 
+	ADD_DEPENDENCIES(fedpkg_scratch_build rpm)
+
 	## Know the tag file path
 	LIST(GET _tags 0 _first_tag)
 	# bodhi tags is used as tag file name
@@ -126,10 +139,12 @@ IF(NOT DEFINED _USE_FEDPKG_CMAKE_)
 		COMMAND ${FEDPKG} switch-branch ${_branch}
 		COMMAND git pull
 		COMMAND ${FEDPKG} scratch-build --srpm ${srpm}
+		DEPENDS ${srpm}
 		WORKING_DIRECTORY ${FEDPKG_DIR}/${PROJECT_NAME}
 		COMMENT "fedpkg scratch build on ${_branch} with ${srpm}"
 		)
 	    ADD_DEPENDENCIES(fedpkg_scratch_build fedpkg_scratch_build_${_branch})
+	    ADD_DEPENDENCIES(fedpkg_scratch_build_${_branch} rpm)
 
 	    ADD_CUSTOM_TARGET(fedpkg_build_${_branch}
 		COMMAND ${FEDPKG} switch-branch ${_branch}
@@ -181,6 +196,7 @@ IF(NOT DEFINED _USE_FEDPKG_CMAKE_)
 		    COMMENT "fedpkg commit on ${_branch} with ${srpm}"
 		    )
 	    ENDIF(_first_branch STREQUAL "")
+	    ADD_DEPENDENCIES(fedpkg_commit_${_branch} rpm)
 	    ADD_DEPENDENCIES(fedpkg_commit fedpkg_commit_${_branch})
 	    ADD_DEPENDENCIES(fedpkg_build_${_branch} fedpkg_commit_${_branch})
 
@@ -351,6 +367,14 @@ IF(NOT DEFINED _USE_FEDPKG_CMAKE_)
 	    ENDIF(BODHI STREQUAL "BODHI-NOTFOUND")
 	ENDIF(EXISTS $ENV{HOME}/.fedora-upload-ca.cert)
     ENDMACRO(USE_BODHI)
+
+    MACRO(RELEASE_ON_FEDORA srpm)
+	USE_FEDPKG($srpm ${ARGN})
+	USE_BODHI(${ARGN})
+	ADD_CUSTOM_TARGET(release_on_fedora)
+	ADD_DEPENDENCIES(release_on_fedora bodhi_new)
+	ADD_DEPENDENCIES(bodhi_new fedpkg_build)
+    ENDMACRO(RELEASE_ON_FEDORA srpm)
 
 ENDIF(NOT DEFINED _USE_FEDPKG_CMAKE_)
 
