@@ -80,8 +80,8 @@ IF(NOT MOCK_CMD STREQUAL "MOCK_CMD-NOTFOUND")
 ENDIF(NOT MOCK_CMD STREQUAL "MOCK_CMD-NOTFOUND")
 
 IF(EXISTS ${MAINTAINER_SETTING})
-    USE_FEDPKG("${RPM_BUILD_SRPMS}/${PRJ_SRPM_FILE_NAME}")
-    USE_BODHI()
+    RELEASE_ON_FEDORA("${RPM_BUILD_SRPMS}/${PRJ_SRPM_FILE_NAME}"
+	    TAGS ${FEDORA_CURRENT_RELEASE_TAGS})
 ENDIF(EXISTS ${MAINTAINER_SETTING})
 
 ####################################################################
