@@ -1,8 +1,10 @@
-PRJ_VER=0.4.11
-SUMMARY=Fixed 670079,671063; Fixed UseUninstall;More informative error message.
+PRJ_VER=0.5.0
+SUMMARY=Fixed 670079,671063; Fixed UseUninstall;More informative error message
 BODHI_UPDATE_TYPE=bugfix
 REDHAT_BUGZILLA=670079,671063
 [Changes]
+- Macro: RELEASE_ON_FEDORA added.
+- Target: release_on_fedora added.
 - Now has more informative error message, when cmake-fedora is not installed.
 - Fixed UseUninstall
 - Fixed Bug 670079 - [cmake-fedora] target "release"
